[metadata]
name = clean_dotenv
version = 0.0.5
description = Automatically creates an .env.example which creates the same keys as your .env file, but without the values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hija/clean-dotenv
author = Hilko (hija)
author_email = mail@hilko.eu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = clean_dotenv

install_requires =
    python-dotenv>=1.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    clean-dotenv = clean_dotenv:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit =
    # We arent responsible for this file, since it comes from python-dotenv
    _parser.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
